--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,20 @@ header {
     margin: 0 auto;
 }
 
+/* Logo */
+#logo {
+    width: 60px;
+    height: 60px;
+    padding: 1%;
+    margin: 0 auto;
+    float: left;
+    background: #FFFFFF;
+}
+
 /* Header navigation style */
 nav {
     float: right;
-    padding: 25px 20px 0 0;
+    padding: 15px 10px 0 10px;
 }
 ul {
     list-style-type: none;
@@ -38,14 +48,60 @@ nav ul li {
     font-size: 150%;
     display: inline-block;
     float: left;
-    padding: 10px;
+    padding: 20px;
 }
 nav ul li a {
     color: #F2F2F2;
 }
 nav ul li a:hover{
-    color: #959595;
+    background-color: #959595;
+    padding-bottom: 15px;
 }
 .current {
-    color: #959595;
+    background-color: #595959;
+    padding-bottom: 25px;
+}
+/*---- End of Header ----*/
+
+/*---- Start Body ----*/
+section {
+    padding: 10px;
+    overflow: hidden;
+    border: 1px solid red;
+}
+section.terminal {
+    float: left;
+    height: 100px;
+}
+
+section.info {
+    float: right;
+    width: 80%;
+    height: 500px;
+}
+
+/*---- End of Body ----*/
+
+/*---- Start Footer ----*/
+footer {
+    position: absolute;
+    bottom: 0;
+    background-color: #000000;
+    width: 100%;
+    height: 86px;
+}
+.links {
+    list-style-type: none;
+    text-align: left;
+}
+.links li {
+    display: inline;
+}
+.links i {
+    font-size: 50px;
+    padding: 1% 1% 0 1%;
+    color: #C3D7DF;
+}
+.links i:hover{
+    color: #F5F5F5;
 }
