--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,30 @@
-/* Reset inherit stylings */
+/*---- Reset inherit stylings ----*/
 * {
     margin: 0;
     padding: 0;
     border: 0;
 }
 
-/* Overall website styles */
+/*---- Overall website styles ----*/
 body {
     background: #595959;
     color: #F2F2F2;
     font-family: "Lucida Sans Typewriter", monospace;
     margin: 0;
 }
+h1 {
+    line-height: 200%;
+    font-size: 70px;
+    font-weight: 1000;
+}
+h3 {
+    line-height: 125%;
+    padding: 1% 0;
+    font-weight: 500;
+    color: #55CF41;
+}
 
-/* Declaring header section container */
+/*---- Start Header ----*/
 header {
     background-color: #000000;
     width: 100%;
@@ -67,19 +78,17 @@ nav ul li a:hover{
 section {
     padding: 10px;
     overflow: hidden;
-    border: 1px solid red;
 }
 section.terminal {
     float: left;
-    height: 100px;
 }
 
 section.info {
-    float: right;
-    width: 80%;
+    float: left;
+    width: 100%;
     height: 500px;
+    text-align: center;
 }
-
 /*---- End of Body ----*/
 
 /*---- Start Footer ----*/
