--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 /*---- Overall website styles ----*/
 body {
-    background: #595959;
+    background: #000000;
     color: #F2F2F2;
     font-family: "Lucida Sans Typewriter", monospace;
     margin: 0;
@@ -26,7 +26,7 @@ h3 {
 
 /*---- Start Header ----*/
 header {
-    background-color: #000000;
+    background-color: #212121;
     width: 100%;
     height: 86px;
 }
@@ -60,17 +60,18 @@ nav ul li {
     display: inline-block;
     float: left;
     padding: 20px;
+    margin: 10px 0;
+}
+nav ul li:hover{
+    background-color: #0B0B0B;
+    padding-bottom: 13px
 }
 nav ul li a {
     color: #F2F2F2;
-}
-nav ul li a:hover{
-    background-color: #959595;
-    padding-bottom: 15px;
+    text-decoration: none;
 }
 .current {
-    background-color: #595959;
-    padding-bottom: 25px;
+    background-color: #000000;
 }
 /*---- End of Header ----*/
 
@@ -85,7 +86,7 @@ section.terminal {
 
 section.info {
     float: left;
-    width: 100%;
+    width: 95%;
     height: 500px;
     text-align: center;
 }
@@ -95,7 +96,7 @@ section.info {
 footer {
     position: absolute;
     bottom: 0;
-    background-color: #000000;
+    background-color: #212121;
     width: 100%;
     height: 86px;
 }
