--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,15 @@ nav {
     float: right;
     padding: 15px 10px 0 10px;
 }
+#menu-icon {
+    display: hidden;
+    width: 40px;
+    height: 40px;
+    background-color: #FFFFFF;
+}
+a:hover#menu-icon {
+    border-radius: 5px 5px 0 0;
+}
 ul {
     list-style-type: none;
 }
