--- a/css/main.css
+++ b/css/main.css
@@ -23,12 +23,19 @@ h3 {
     font-weight: 500;
     color: #55CF41;
 }
+span {
+    line-height: 125%;
+    padding: 1% 0;
+    font-weight: 500;
+    color: #55CF41;
+}
 
 /*---- Start Header ----*/
 header {
     background-color: #212121;
     width: 100%;
     height: 86px;
+    border-bottom: 3px solid #000000;
 }
 /* Responsive weblayout setting for header section */
 #header-inner {
@@ -69,11 +76,11 @@ nav ul li {
     display: inline-block;
     float: left;
     padding: 20px;
-    margin: 10px 0;
+    margin: 5px 0;
 }
 nav ul li:hover{
     background-color: #0B0B0B;
-    padding-bottom: 13px
+    padding-bottom: 18px
 }
 nav ul li a {
     color: #F2F2F2;
@@ -91,12 +98,20 @@ section {
 }
 section.terminal {
     float: left;
+    width: 40%;
+    height: 200px;
 }
 
 section.info {
     float: left;
     width: 95%;
-    height: 500px;
+    height: 100px;
+    text-align: center;
+}
+
+section.buttons {
+    float: left;
+    width: 95%;
     text-align: center;
 }
 .button {
@@ -110,10 +125,11 @@ section.info {
     font-size: 30px;
     margin: 4px 2px;
     transition-duration: 0.4s;
-    cursor: pointer;
+    opacity: 0;
 }
 .button:hover {
     background-color: #5B5A5A;
+    border-bottom: 5px solid #4C4C4C;
 }
 .btnResume {
     margin-right: 5%;
