--- a/css/homepage.css
+++ b/css/homepage.css
@@ -6,23 +6,32 @@
 }
 
 /*---- Overall website styles ----*/
+html {
+    position: relative;
+    height: 100%;
+}
 body {
     background: #000000;
     color: #F2F2F2;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
     font-family: "Lucida Sans Typewriter", monospace;
-    margin: 0;
 }
+/* For center info display messages */
 h1 {
     line-height: 200%;
     font-size: 70px;
     font-weight: 1000;
 }
+/* For terminal console message without <script>*/
 h3 {
     line-height: 125%;
     padding: 1% 0;
     font-weight: 500;
     color: #55CF41;
 }
+/* For terminal console message typing */
 span {
     line-height: 125%;
     padding: 1% 0;
@@ -30,7 +39,7 @@ span {
     color: #55CF41;
 }
 
-/*---- Start Header ----*/
+/*---- Navigation Bar ----*/
 header {
     background-color: #212121;
     width: 100%;
@@ -53,7 +62,7 @@ header {
     background: #FFFFFF;
 }
 
-/* Header navigation style */
+/* Navigation bar style */
 nav {
     float: right;
     padding: 15px 10px 0 10px;
@@ -89,15 +98,14 @@ nav ul li a {
 .current {
     background-color: #000000;
 }
-/*---- End of Header ----*/
+/*---- End of Navigation bar ----*/
 
 /*---- Start Footer ----*/
 footer {
-    position: absolute;
-    bottom: 0;
     background-color: #212121;
     width: 100%;
     height: 86px;
+    margin-top: auto;   /* For sticky footer */
 }
 .links {
     list-style-type: none;
