Created template page

--- a/templates/template.css
+++ b/templates/template.css
@@ -104,72 +104,4 @@ footer {
 }
 /*---- End of Footer ----*/
 
-/*---- Start Body ----*/
-section {
-    padding: 10px;
-    overflow: hidden;
-}
-section.terminal {
-    float: left;
-    width: 40%;
-    height: 200px;
-}
-
-section.info {
-    float: left;
-    width: 95%;
-    height: 100px;
-    text-align: center;
-}
-
-section.buttons {
-    float: left;
-    width: 95%;
-    text-align: center;
-}
-.button {
-    background-color: #000000;
-    color: #FFFFFF;
-    border: 3px solid #5B5A5A;
-    border-radius: 10px;
-    padding: 20px 40px;
-    text-align: center;
-    display: inline-block;
-    font-size: 30px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    opacity: 0;
-}
-.button:hover {
-    background-color: #5B5A5A;
-    border-bottom: 5px solid #4C4C4C;
-}
-.btnResume {
-    margin-right: 5%;
-}
-.btnContact {
-    margin-left: 5%;
-}
-
-/*---- End of Body ----*/
-
-/* For center info display messages */
-h1 {
-    line-height: 200%;
-    font-size: 70px;
-    font-weight: 1000;
-}
-/* For terminal console message without <script>*/
-h3 {
-    line-height: 125%;
-    padding: 1% 0;
-    font-weight: 500;
-    color: #55CF41;
-}
-/* For terminal console message typing */
-span {
-    line-height: 125%;
-    padding: 1% 0;
-    font-weight: 500;
-    color: #55CF41;
-}
+/*---- Page content specific css goes here ----*/
