Refactor: sharing base.css

--- a/templates/template.html
+++ b/templates/template.html
@@ -7,6 +7,8 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS reference -->
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/base.css">
     </head>
     <!-- End of head descriptor -->
 
@@ -27,8 +29,8 @@
                     <!-- Navigation tabs -->
                     <ul id="nav">
                         <li id="homepage" class="current"><a href="index.html">Home</a></li>
-                        <li id="about"><a href="#">About</a></li>
-                        <li id="resume"><a href="#">Resume</a></li>
+                        <li id="about"><a href="about.html">About</a></li>
+                        <li id="resume"><a href="resume.html">Resume</a></li>
                         <!--li id="profolio"><a href="#">Profolio</a></li-->
                     </ul>
                 </nav>
