--- a/css/resume.css
+++ b/css/resume.css
@@ -1,47 +1,51 @@
+/*---- Overriding h1 in resume.html ----*/
+h1 {
+    font-size: 200px;
+    letter-spacing: 7px;
+    color: rgba(255, 255, 255, 0.7);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+h2 {
+    font-size: 50px;
+    font-weight: 1000;
+    line-height: 100px;
+    letter-spacing: 5px;
+}
+p {
+    font-size: 35px;
+    line-height: 75px;
+    color: #000000;
+}
+
 /*---- Page content specific css goes here ----*/
 main {
     display: block;
-
+}
+body {
+    background-color: #FFFFFF;
 }
 .container {
-    max-width: 960px;
-    margin: 0 auto;
+    max-width: 100%;
 }
 
 section.module:last-child {
     margin-bottom: 0;
 }
-section.module h2 {
-  margin-bottom: 40px;
-  font-family: "Roboto Slab", serif;
-  font-size: 30px;
-}
-section.module p {
-  margin-bottom: 40px;
-  font-size: 16px;
-  font-weight: 300;
-}
 section.module p:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
-section.module.content {
-  padding: 40px 0;
-}
+
 section.module.parallax {
-  height: 600px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+    height: 600px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 section.module.parallax h1 {
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 48px;
-  line-height: 600px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    line-height: 600px;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 section.module.parallax-1 {
@@ -54,4 +58,41 @@ section.module.parallax-2 {
 
 section.module.parallax-3 {
     background-image: url("../img/parallax3.jpg");
+}
+
+.skill {
+    width: 33%;
+    height: 600px;
+    float: left;
+    display: inline-block;
+    text-align: center;
+}
+.topskill {
+    width: 34%;
+    background-color: #00C0FF;
+}
+.familiarskill {
+    background-color: #74FBA0;
+}
+.expskill {
+    background-color: #A07AFF;
+}
+
+.exp {
+    max-width: none;
+    width: 90%;
+}
+.exp.leftbox {
+    float: left;
+    background-color: #86DEFB;
+}
+.exp.rightbox {
+    float: right;
+    background-color: #C05875;
+}
+.exp h2 {
+    text-align: center;
+}
+.exp p {
+    padding-left: 10px;
 }
