--- a/css/version2.css
+++ b/css/version2.css
@@ -33,20 +33,28 @@ section.rightpanel {
     height: 100%;
     margin-left: -300px;
     z-index: 1;
+    overflow: hidden;
 }
 section.sidebar-wrapper {
     width: 300px;
     height: 100%;
-    display: none;
+    margin-left: 300px;
+    background-color: rgba(178, 221, 236, 0.7);
 }
 
-.icon {
+#logo {
+    position: absolute;
     height: 80px;
     width: 80px;
-    margin: 10% auto;
+    top: 4%;
+    right: 110px;
     background-color: #FFFFFF;
+    display: block;
 }
 
+.sidebar {
+    display: inline;
+}
 .sidebar ul {
     list-style-type: none;
 }
@@ -56,7 +64,7 @@ section.sidebar-wrapper {
 }
 
 .internal {
-    margin-top: 35%;
+    margin-top: 55%;
     text-align: center;
 }
 .internal li {
