--- a/css/base.css
+++ b/css/base.css
@@ -11,151 +11,68 @@ html {
     height: 100%;
 }
 body {
-    background: #000000;
-    color: #F2F2F2;
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+    background: #2E2D30;
+    color: #B2DDEC;
     font-family: "Lucida Sans Typewriter", monospace;
 }
 
-/* For center info display messages */
-h1 {
-    line-height: 200%;
-    font-size: 70px;
-    font-weight: 1000;
-}
-/* For terminal console message without <script>*/
-h3 {
-    line-height: 125%;
-    padding: 1% 0;
-    font-weight: 500;
-    color: #55CF41;
-}
-/* For terminal console message typing */
-span {
-    line-height: 125%;
-    padding: 1% 0;
-    font-weight: 500;
-    color: #55CF41;
-}
-
-/*---- Navigation Bar ----*/
-header {
-    background-color: #212121;
-    width: 100%;
-    height: 86px;
-    border-bottom: 3px solid #000000;
-}
-/* Responsive weblayout setting for header section */
-#header-inner {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-/* Logo */
-#logo {
-    width: 60px;
-    height: 60px;
-    padding: 1%;
-    margin: 0 auto;
+section {
     float: left;
-    background: #FFFFFF;
-}
-
-/* Navigation bar style */
-nav {
-    float: right;
-    padding: 15px 10px 0 10px;
-}
-#menu-icon {
-    display: hidden;
-    width: 70px;
-    height: 70px;
-    background: url(../img/menuIcon.png) center;
-    background-repeat: no-repeat;
-}
-li:hover#menu-icon {
-    border-radius: 5px 5px 0 0;
-}
-ul {
-    list-style-type: none;
-}
-nav ul li {
-    font-size: 150%;
     display: inline-block;
-    float: left;
-    padding: 20px;
-    margin: 5px 0;
+    overflow: hidden;
 }
-nav ul li:hover{
-    background-color: #0B0B0B;
-    padding-bottom: 18px
-}
-nav ul li a {
-    color: #F2F2F2;
-    text-decoration: none;
-}
-.current {
-    background-color: #000000;
-}
-/*---- End of Navigation bar ----*/
 
-/*---- Start Footer ----*/
-footer {
-    background-color: #212121;
-    width: 100%;
-    height: 86px;
-    margin-top: auto;   /* For sticky footer */
+section.rightpanel {
+    position: fixed;
+    width: 300px;
+    height: 100%;
+    margin-left: -300px;
+    z-index: 1;
+    overflow: hidden;
 }
-.links {
-    list-style-type: none;
-    text-align: left;
+section.sidebar-wrapper {
+    width: 300px;
+    height: 100%;
+    background-color: rgba(178, 221, 236, 0.7);
 }
-.links li {
+
+.sidebar {
     display: inline;
 }
-.links i {
-    font-size: 50px;
+.sidebar ul {
+    list-style-type: none;
+}
+.sidebar a {
+    color: #535057;
+    text-decoration: none;
+}
+
+.internal {
+    margin-top: 55%;
+    text-align: center;
+}
+.internal li {
+    margin: 5% auto;
+}
+.internal a {
+    font-size: 20px;
+}
+
+.external {
+    position: absolute;
+    bottom: 5%;
+    width: 100%;
+    float: left;
+    text-align: center;
+}
+.external li {
+    display: inline;
+    margin: 0 auto;
+}
+.external a {
+    margin: 5%;
+}
+.external i {
+    font-size: 35px;
     padding: 1% 1% 0 1%;
-    color: #9BDDF7;
-}
-.links i:hover {
-    color: #F5F5F5;
-}
-/*---- End of Footer ----*/
-
-/*---- MEDIA SECTION ----*/
-@media screen and (max-width: 768px) {
-    #logo {
-        margin-left: 30px;
-        margin-top: 5px;
-    }
-    #menu-icon {
-        display: inline-block;
-    }
-    nav ul, nav:active ul {
-        display: none;
-        z-index: 1000;
-        position: absolute;
-        padding: 20px;
-        background: #FFFFFF;
-        right: 20px;
-        top: 60px;
-        border: 1px solid #FFF;
-        border-radius: 10px 0 10px 10px;
-        width: 50%;
-    }
-    nav:hover ul {
-        display: block;
-    }
-    nav ul li {
-        text-align: center;
-        width: 100%;
-        padding: 10px 0;
-    }
-    .current {
-        background: #FFFFFF;
-    }
-
 }
