--- a/templates/template.html
+++ b/templates/template.html
@@ -6,52 +6,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
 
-        <!-- CSS reference -->
+        <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
+
+        <!-- Javascript animation -->
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
     <body>
-        <!-- Javascript references -->
-
-        <!-- Navigation bar -->
-        <header>
-            <div id="header-inner">
-                <!-- Logo reference -->
-                <a href="homepage.html" id="logo"></a>
-
-                <!-- Navigation menu -->
-                <nav>
-                    <!-- Menu icon for mobile/tablet -->
-                    <a href="#" id="menu-icon"></a>
-
-                    <!-- Navigation tabs -->
-                    <ul id="nav">
-                        <li id="homepage" class="current"><a href="index.html">Home</a></li>
-                        <li id="about"><a href="about.html">About</a></li>
-                        <li id="resume"><a href="resume.html">Resume</a></li>
-                        <!--li id="profolio"><a href="#">Profolio</a></li-->
+        <section class="rightpanel" id="panel">
+            <!--Sidebar -->
+            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
+                <div class="sidebar" id="sidebar">
+                    <!-- Internal links -->
+                    <ul class="internal">
+                        <li><a href="index.html"> HOME </a></li>
+                        <li><a href="#"> ABOUT </a></li>
+                        <li><a href="#"> RESUME </a></li>
                     </ul>
-                </nav>
-            </div>
-        </header>
-        <!-- End of Navigation bar-->
 
-        <!-- Page specific contents goes here -->
-
-        <!-- Footer container -->
-        <footer>
-            <!-- Links to external sites -->
-            <ul class="links">
-                <!-- LinkedIn -->
-                <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin-square"></i></a></li>
-                <!-- Github projects -->
-                <!--li><a href="#"><i class="fa fa-github-square"></i></a></li-->
-                <!-- Steam -->
-                <!--li><a href="#"><i class="fa fa-steam-square"></i></a></li-->
-            </ul>
-        </footer>
-        <!-- End of footer container -->
+                    <!-- External links -->
+                    <ul class="external">
+                        <li><a href="http://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
     </body>
 </html>
