--- a/css/about.css
+++ b/css/about.css
@@ -2,9 +2,46 @@ section.leftpanel {
     text-align: center;
 }
 
+h1 {
+    font-size: 72px;
+    padding: 10px 0;
+}
+p {
+    text-align: justify;
+    margin: 2%;
+}
+
 .container {
     width: 80%;
     height: 600px;
     margin: 5% auto;
     border-bottom: 3px solid white;
+    display: block;
+}
+
+.icon i {
+    float: left;
+    margin: 1%;
+    font-size: 150px;
+    color: #B2DDEC;
+}
+
+section.detail-wrapper {
+    float: left;
+    width: 100%;
+    text-align: center;
+}
+section.detail-wrapper div {
+    float: left;
+    width: 30%;
+    margin: 5% 1% 1% 1%;
+    display: inline;
+}
+section.detail-wrapper i {
+    margin: 3%;
+}
+
+.textaligner {
+    width: 75%;
+    border: 1px solid red;
 }
