--- a/templates/template.html
+++ b/templates/template.html
@@ -33,6 +33,7 @@
                         <li><a href="index.html"> HOME </a></li>
                         <li><a href="about.html"> ABOUT </a></li>
                         <li><a href="resume.html"> RESUME </a></li>
+                        <li><a href="porfolio.html"> PORFOLIO </a></li>
                     </ul>
 
                     <!-- External links -->
