--- a/templates/portfoliotemplate.html
+++ b/templates/portfoliotemplate.html
@@ -7,12 +7,13 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/base.css">
+        <link rel="stylesheet" href="css/portfolio_base.css">
 
         <!-- Javascript animation -->
-        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="js/base.js" type="text/javascript"></script>
+        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="../js/base.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -21,7 +22,11 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <!-- Page Content -->
+            <div class="fullimg">
+            </div>
+            <div class="content">
+
+            </div>
         </section>
 
         <section class="rightpanel" id="panel">
@@ -30,10 +35,10 @@
                 <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
-                        <li><a href="resume.html"> RESUME </a></li>
-                        <li><a href="projects.html"> PROJECTS </a></li>
+                        <li><a href="../index.html"> HOME </a></li>
+                        <li><a href="../html/about.html"> ABOUT </a></li>
+                        <li><a href="../html/resume.html"> RESUME </a></li>
+                        <li class="current"><a href="../html/portfolio.html"> PORFOLIO </a></li>
                     </ul>
 
                     <!-- External links -->
