--- a/templates/project_template.html
+++ b/templates/project_template.html
@@ -5,15 +5,16 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
+        <base href="/jasonlin0815.github.io/">
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="css/portfolio_base.css">
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="projects/project_base.css">
 
         <!-- Javascript animation -->
-        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="../js/base.js" type="text/javascript"></script>
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/base.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -29,16 +30,16 @@
             </div>
         </section>
 
-        <section class="rightpanel" id="panel">
+        <section class="rightpanel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
-                <div class="sidebar" id="sidebar">
+            <section class="sidebar-wrapper">
+                <div class="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="../index.html"> HOME </a></li>
-                        <li><a href="../html/about.html"> ABOUT </a></li>
-                        <li><a href="../html/resume.html"> RESUME </a></li>
-                        <li class="current"><a href="../html/portfolio.html"> PORFOLIO </a></li>
+                        <li><a href="index.html"> HOME </a></li>
+                        <li><a href="html/about.html"> ABOUT </a></li>
+                        <li><a href="html/resume.html"> RESUME </a></li>
+                        <li class="current"><a href="html/projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
