--- a/css/about.css
+++ b/css/about.css
@@ -11,21 +11,23 @@ p {
     display: block;
     width: 80%;
     margin: 10% auto;
-    border-bottom: 2px solid white;
 }
 
 .upper {
     display: flex;
 }
 
-.img {
-    width: 300px;
-    height: 300px;
-    background-color: #FFF;
-}
 .text {
-    flex: 1;
+    width: 50%;
+    margin: 5% auto;
 }
-
-
+.text h1 {
+    font-size: 82px;
+    opacity: 0.6;
+    margin: 1% auto;
+    padding: 1%;
+}
+.text p {
+    font-size: 20px;
+}
 
