--- a/css/projects.css
+++ b/css/projects.css
@@ -10,9 +10,24 @@ h3 {
     text-align: center;
 }
 
-section.leftpanel
-{
+section.leftpanel {
     height: 100%;
+}
+.fullimg {
+    position: fixed;
+    right: 0;
+    width: 65%;
+    height: 100%;
+    z-index: 0;
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: cover;
+    display: none;
+}
+.fullimg div {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(178, 221, 236, 0.1);
 }
 
 .content {
@@ -23,17 +38,22 @@ section.leftpanel
     float: left;
     width: 100%;
     height: 100%;
-    margin: 10% auto;
+    margin: 3% auto;
     list-style-type: none;
     display: flex;
     flex-direction: column;
 }
 .list li {
-    margin: 10% 0;
+    margin: 5% 0;
+    z-index: 2;
 }
-
 .list a {
     float: left;
     display: block;
     text-decoration: none;
+}
+.list img {
+    width: 0;
+    height: 0;
+    visibility: hidden;
 }
