--- a/projects/fragments/fragments.html
+++ b/projects/fragments/fragments.html
@@ -5,16 +5,18 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
+        <base href="/jasonlin0815.github.io/">
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="css/project_base.css">
-        <link rel="stylesheet" href="css/fragments.css">
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/gallery.css">
+        <link rel="stylesheet" href="projects/project_base.css">
 
         <!-- Javascript animation -->
-        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="../js/base.js" type="text/javascript"></script>
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/base.js" type="text/javascript"></script>
+        <script src="js/gallery.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -23,28 +25,34 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <div class="fullimg">
-            </div>
-            <div class="content">
-                <h1> Fragments </h1>
-                <p> After an impulsive purchase of HTC Vive system, and of course couple days of fun VR experience. I decided to play around Unity3D to create a VR world with integrated APIs. This just a small demonstration on what I created: locomotion control that uses 3rd party open-source, interaction in the world through controller (it calls haptic pulse). Hoping this, in future, will expand and continue to a bigger project. </p>
+            <div class="showcase">
+                <div class="fullimg">
+                </div>
 
-                <!-- Placeholder for video demonstration -->
-                <div class="video">
+                <div class="content">
+                    <h1> Fragments </h1>
+                    <p> After an impulsive purchase of HTC Vive system, and of course couple days of fun VR experience. I decided to play around Unity3D to create a VR world with integrated APIs. This just a small demonstration on what I created: locomotion control that uses 3rd party open-source, interaction in the world through controller (it calls haptic pulse). Hoping this, in future, will expand and continue to a bigger project. </p>
                 </div>
             </div>
+
+            <section class="gallery-wrapper">
+                <div class="gallery">
+                    <div class="gallery-img"><img src="#"></div>
+                </div>
+            </section>
+
         </section>
 
-        <section class="rightpanel" id="panel">
+        <section class="rightpanel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
-                <div class="sidebar" id="sidebar">
+            <section class="sidebar-wrapper">
+                <div class="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="../index.html"> HOME </a></li>
-                        <li><a href="../html/about.html"> ABOUT </a></li>
-                        <li><a href="../html/resume.html"> RESUME </a></li>
-                        <li class="current"><a href="../html/portfolio.html"> PORFOLIO </a></li>
+                        <li><a href="index.html"> HOME </a></li>
+                        <li><a href="html/about.html"> ABOUT </a></li>
+                        <li><a href="html/resume.html"> RESUME </a></li>
+                        <li class="current"><a href="html/projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
@@ -57,3 +65,4 @@
         </section>
     </body>
 </html>
+
