--- a/templates/project_template.html
+++ b/templates/project_template.html
@@ -10,11 +10,13 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="projects/project_base.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="js/base.js" type="text/javascript"></script>
+        <script src="js/gallery.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -23,11 +25,21 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <div class="fullimg">
-            </div>
-            <div class="content">
+            <div class="showcase">
+                <div class="fullimg">
+                </div>
 
+                <div class="content">
+
+                </div>
             </div>
+
+            <section class="gallery-wrapper">
+                <div class="gallery">
+                    <div class="gallery-img"><img src="#"></div>
+                </div>
+            </section>
+
         </section>
 
         <section class="rightpanel">
