--- a/css/about.css
+++ b/css/about.css
@@ -7,27 +7,113 @@ p {
     margin: 2%;
 }
 
+.fab {
+    position: fixed;
+    width: 150px;
+    height: 150px;
+    top: 15%;
+    left: 15%;
+    border: 1px solid red;
+}
+
 .content {
     display: block;
+    height: 100%;
     width: 80%;
     margin: 10% auto;
 }
 
-.upper {
+.desc {
     display: flex;
+    min-height: 50%;
+    width: 100%;
+    margin: 10% auto;
+    border-bottom: 2px solid rgba(178, 221, 236, 0.4);
+}
+
+.title h1 {
+    font-size: 150px;
+    opacity: .5;
+    margin: 0 auto;
+}
+
+.hi {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hi h1 {
+    font-size: 300px;
+    opacity: .5;
+    margin: 0 auto;
 }
 
 .text {
-    width: 50%;
-    margin: 5% auto;
+    height: 100%;
 }
 .text h1 {
-    font-size: 82px;
-    opacity: 0.6;
-    margin: 1% auto;
-    padding: 1%;
+    font-size: 100px;
+    opacity: .7;
+    margin: 5% auto;
 }
 .text p {
-    font-size: 20px;
+    width: 70%;
+    margin: 0 auto;
+    opacity: .9;
 }
 
+.blockdisplay{
+    flex-direction: column;
+}
+.skill-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.skill-content h3 {
+    font-size: 25px;
+    margin: 10px auto;
+}
+.skill-high {
+    opacity: 0.9;
+}
+.skill-mid {
+    opacity: 0.6;
+}
+.skill-low {
+    opacity: 0.4;
+}
+
+.job-title {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    margin-top: 5%;
+}
+.job-title h1 {
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    opacity: .9;
+}
+.job-title p {
+    position: absolute;
+    font-size: 30px;
+    bottom: 0;
+    left: 20%;
+    opacity: .7;
+}
+.job-title h3 {
+    position: absolute;
+    font-size: 100px;
+    right: 0;
+    top: 40%;
+    letter-spacing: 20px;
+    opacity: .1;
+}
+
+.job-section {
+    width: 100%;
+}
