--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,11 +3,19 @@
     height: 100%;
 }
 .fullimg {
+    position: relative;
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+}
+.fullimg iframe {
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    top: 10%;
+    left: 10%;
 }
 
 .content {
