--- a/css/base.css
+++ b/css/base.css
@@ -1,100 +1,45 @@
-/*---- Reset inherit stylings ----*/
-* {
+/* Reset CSS */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
-/*---- Overall website styles ----*/
-html, body {
-    height: 100%;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
 }
 body {
-    background: #2E2D30;
-    color: #B2DDEC;
-    font-family: "Lucida Sans Typewriter", monospace;
+    line-height: 1;
 }
-
-#logo {
-    position: absolute;
-    height: 80px;
-    width: 80px;
-    top: 4%;
-    right: 110px;
-    background: url(../statics/icon.png) no-repeat center;
-    display: block;
-    z-index: 1;
+ol, ul {
+    list-style: none;
 }
-
-section {
-    float: left;
-    display: inline-block;
+blockquote, q {
+    quotes: none;
 }
-
-section.rightpanel {
-    position: fixed;
-    width: 300px;
-    height: 100%;
-    right: 0;
-    margin-left: -300px;
-    z-index: 10;
-    display: inline;
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
 }
-section.sidebar-wrapper {
-    width: 300px;
-    height: 100%;
-    margin-left: 0;
-    background-color: rgba(178, 221, 236, 0.7);
-}
-
-.sidebar {
-    display: inline;
-}
-.sidebar ul {
-    list-style-type: none;
-}
-.sidebar a {
-    color: #535057;
-    text-decoration: none;
-}
-
-.internal {
-    margin-top: 55%;
-    text-align: center;
-}
-.internal li {
-    padding: 20px 0;
-    margin: 5% auto;
-}
-.internal a {
-    font-size: 30px;
-}
-
-.current a {
-    border-bottom: 2px solid #535057;
-}
-
-.external {
-    position: absolute;
-    bottom: 5%;
-    width: 100%;
-    float: left;
-    text-align: center;
-}
-.external li {
-    display: inline;
-    margin: 0 auto;
-}
-.external a {
-    margin: 5%;
-}
-.external i {
-    font-size: 35px;
-    padding: 1% 1% 0 1%;
-}
-
-section.leftpanel {
-    width: 100%;
-    height: 100%;
-    display: block;
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
 }
