--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,8 @@
 /* Navigation bar, default hidden */
-#navbar {
-    /*display: hidden;*/
+section#navbar {
+    display: none;
+}
+#navbar-wrapper {
     position: absolute;
     top: 0;
     left: 0;
@@ -39,7 +41,7 @@
     margin: 0 60px;
 }
 #navbar-links li {
-    margin: 0 40px;
+    margin: 0 20px;
 }
 #navbar-links i {
     font-size: 45px;
@@ -49,5 +51,5 @@
 
 /* Navigation bar close button */
 #navbar-close-button {
-    margin-right: 100px;
+    margin: 0 50px 0 100px !important;
 }
