--- a/css/fab.css
+++ b/css/fab.css
@@ -4,7 +4,7 @@
     height: 100px;
     width: 100px;
     top: 75px;
-    right: 100px;
+    right: 5%;
     background: url(../statics/FAB.png);
     display: flex;
     flex-direction: column;
