--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,17 +1,16 @@
 /* Navigation bar, default hidden */
-section#navbar {
-    display: none;
-}
 #navbar-wrapper {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100px;
+    margin-top: -100px;
     background-color: #F3867B;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 #navbar a {
     text-decoration: none;
@@ -23,7 +22,7 @@ section#navbar {
     margin-left: 60px;
 }
 #navbar-pages li {
-    margin: 0 60px;
+    margin: 0 30px;
     opacity: 0.7;
 }
 #navbar-pages h3 {
