--- a/css/blinkscroller.css
+++ b/css/blinkscroller.css
@@ -2,28 +2,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
-    bottom: 30px;
+    position: absolute;
+    bottom: 20px;
     left: 50%;
     z-index: 1;
 }
+
 #blinking-scroller div {
-    width: 30px;
-    height: 30px;
+    width: 22px;
+    height: 22px;
+    margin: 2px;
     border-radius: 50% 50%;
     background-color: #69676E;
-    opacity: 1;
-    margin: 2px;
 }
-
-#blinking-scroller-2 {
-    width: 22px !important;
-    height: 22px !important;
-    opacity: 0.6 !important;
+#blinking-scroller div:nth-child(2){
+    width: 18px;
+    height: 18px;
+    opacity: 0.6;
 }
-
-#blinking-scroller-3 {
-    width: 15px !important;
-    height: 15px !important;
-    opacity: .3 !important;
+#blinking-scroller div:nth-child(3) {
+    width: 15px;
+    height: 15px;
+    opacity: 0.3;
 }
