--- a/css/navbar.css
+++ b/css/navbar.css
@@ -35,14 +35,14 @@
 }
 
 /* Navigation page links */
-#navbar-links {
+#external-links {
     display: flex;
     margin: 0 60px;
 }
-#navbar-links li {
+#external-links li {
     margin: 0 20px;
 }
-#navbar-links i {
+#external-links i {
     font-size: 45px;
     color: #2E2D30;
     opacity: 0.7;
